@@ -13,20 +13,19 @@
 		<context>s1tbx</context>
 		
 		<skipTests>false</skipTests>
-		<test.jvm.maxpermsize>512m</test.jvm.maxpermsize>
         <test.jvm.maxheapsize>5024m</test.jvm.maxheapsize>
-        <test.jvm.arguments>-Xmx${test.jvm.maxheapsize} -XX:MaxPermSize=${test.jvm.maxpermsize}</test.jvm.arguments>
+        <test.jvm.arguments>-Xmx${test.jvm.maxheapsize}</test.jvm.arguments>
         <surefire.jvm.args>${test.jvm.arguments} -enableassertions -Dceres.context=${context}</surefire.jvm.args>
 
 		<jlinda.version>0.8.1</jlinda.version>
 		<rstb.version>6.2-SNAPSHOT</rstb.version>
-		<s1tbx.version>0.5.0-SNAPSHOT</s1tbx.version>
+		<s1tbx.version>0.7.0-SNAPSHOT</s1tbx.version>
 		<snap.version>0.5.0-SNAPSHOT</snap.version>
 		
 		<geotools.version>2.7.4</geotools.version>
-		<jide.version>3.5.3</jide.version>
+		<jide.version>3.6.1</jide.version>
 		<hdf.version>2.7</hdf.version>
-        <netcdf.version>4.3.21</netcdf.version>	
+        <netcdf.version>4.3.22</netcdf.version>	
 		
 		<outputdir>../../output</outputdir>
 		<pacakgedir>../package</pacakgedir>
@@ -40,7 +39,7 @@
     <url>https://earth.esa.int/web/sentinel-tbx/home</url>
     <groupId>org.esa.s1tbx</groupId>
     <artifactId>s1tbx</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.7.0-SNAPSHOT</version>
 
 	<issueManagement>
         <system>JIRA</system>
@@ -116,6 +115,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        
     </repositories>
 
     <pluginRepositories>
@@ -551,12 +551,28 @@
                         <groupId>javax.media</groupId>
                         <artifactId>jai_imageio</artifactId>
                     </exclusion>
+					<exclusion>
+                        <groupId>it.geosolutions.imageio-ext</groupId>
+                        <artifactId>imageio-ext-tiff</artifactId>
+                    </exclusion>
+					<exclusion>
+                        <groupId>it.geosolutions.imageio-ext</groupId>
+                        <artifactId>imageio-ext-utilities</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
 			<dependency>
 				<groupId>com.vividsolutions</groupId>
                 <artifactId>jts</artifactId>
                 <version>1.13</version>
+			</dependency>
+			
+			<!-- ImageioIO-Ext ############################################# -->
+			
+			<dependency>
+				<groupId>it.geosolutions.imageio-ext</groupId>
+				<artifactId>imageio-ext-tiff</artifactId>
+				<version>1.1.9</version>
 			</dependency>
 			
             <!-- JAI Libraries ############################################# -->
@@ -994,13 +1010,14 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
 					<outputDirectory>${pacakgedir}</outputDirectory>
+					<finalName>s1tbx</finalName>
                     <descriptors>
 						<descriptor>s1tbx-config/main/assembly/bin-windows64.xml</descriptor>
 						<descriptor>s1tbx-config/main/assembly/bin-windows.xml</descriptor>						
 						<descriptor>s1tbx-config/main/assembly/bin-linux.xml</descriptor>
 						<descriptor>s1tbx-config/main/assembly/bin-linux64.xml</descriptor>
-						<!--descriptor>s1tbx-config/main/assembly/bin-mac.xml</descriptor-->
-						<!--descriptor>s1tbx-config/main/assembly/repository.xml</descriptor-->
+						<descriptor>s1tbx-config/main/assembly/bin-mac.xml</descriptor>
+						<descriptor>s1tbx-config/main/assembly/repository.xml</descriptor>
 						<!--descriptor>s1tbx-config/main/assembly/web-help.xml</descriptor-->
                         <!--descriptor>s1tbx-config/main/assembly/src.xml</descriptor-->
                     </descriptors>
